# plantbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_install.cmake  installCPlantBox.py  installDependencies.py  installDumuxRosiCluster.py  pybind11.cmake
applications/parametrisation/: benchmark3.py
debug_test/: CMakeLists.txt  Debug  debug_test  main.cpp
modelparameter/plant/: 0_.xml  wheat_withStemLeaf.xml
src/: CMakeLists.txt  Leaf.cpp  Leaf.h  MappedOrganism.cpp  MappedOrganism.h  Organ.cpp  Organ.h  Organism.cpp  Organism.h  Plant.cpp  Plant.h  PyPlantBox.cpp  Root.cpp  Root.h  RootSystem.cpp  RootSystem.h  Seed.cpp  Seed.h  Stem.cpp  Stem.h  leafparameter.cpp  leafparameter.h  mymath.h  organparameter.cpp  organparameter.h  rootparameter.cpp  rootparameter.h  seedparameter.h  stemparameter.cpp  stemparameter.h  tropism.cpp  tropism.h
src/PiafMunch/: runPM.h
src/functional/: #xylem_flux.py#
src/python_modules/: vtk_plot.py
src/rsml/: #rsml_reader.py#
src/structural/: Organ.cpp  Organ.h
test/: test_leafparameter.py
tutorial/examples/old_cpp/: CMakeLists.txt  example_volume.h  test
tutorial/examples/python/: #example6b_xylemflux.py#  UQprez.py  example_geometry.py  simpleactorcritic.py
tutorial/examples/python/results/: P0_plant (2).xml:Zone.Identifier  P0_plant.xml  P1_plant (2).xml:Zone.Identifier  P1_plant.xml  P2_plant (2).xml:Zone.Identifier  P2_plant.xml  P3_plant (2).xml:Zone.Identifier  P3_plant.xml
tutorial/jupyter/UQ_15_08_2022/: 1_cplantbox.ipynb  2_water_flux.ipynb  3_water_and_carbon_flux.ipynb  first_example.rsml
tutorial/jupyter/crop_in_silico_2022/: first_example.rsml
tutorial/jupyter/workshop_11_2_2022/examples_usage/results/: ana_example1e_0.txt  ana_example1e_1.txt  ana_example1e_10.txt  ana_example1e_11.txt  ana_example1e_12.txt  ana_example1e_13.txt  ana_example1e_14.txt  ana_example1e_15.txt  ana_example1e_16.txt  ana_example1e_17.txt  ana_example1e_18.txt  ana_example1e_19.txt  ana_example1e_2.txt  ana_example1e_20.txt  ana_example1e_21.txt  ana_example1e_22.txt  ana_example1e_23.txt  ana_example1e_24.txt  ana_example1e_25.txt  ana_example1e_26.txt  ana_example1e_27.txt  ana_example1e_28.txt  ana_example1e_29.txt  ana_example1e_3.txt  ana_example1e_4.txt  ana_example1e_5.txt  ana_example1e_6.txt  ana_example1e_7.txt  ana_example1e_8.txt  ana_example1e_9.txt
tutorial/jupyter/workshop_11_2_2022/test_case/: 1_aboveground_parameters.ipynb
